sandc/test/fixtures/astRegression/shouldFail/productions/ifTypeGuardPseudex/ElseIfBlockStatement.sand
pub class ElseIfBlockStatement {
    foo() {
        let a = if let b = c {
            c
        } else if cond {
            foo();
        } else {
            c
        };
    }
}